generate jar file

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ application {
 shadowJar {
     archiveBaseName = "grass"
     archiveClassifier = null
+    archiveFileName = 'grass.jar'
 }
 
 run{
